[tool.poetry]
name = "socketlessen"
version = "0.1.0"
description = ""
authors = ["Ваше Имя <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
logsmal = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
